price svc spec conversion,all tests working, price svc spec

--- a/src/adapters/http/views/partials/cardInfo.hbs
+++ b/src/adapters/http/views/partials/cardInfo.hbs
@@ -24,7 +24,7 @@
                 <p class="card-type section-content">{{card.type}}</p>
                 <p class="card-oracle-text section-content">{{card.oracleText}}</p>
             </section>
-            <p class="card-rarity section-content">{{card.rarity}}</p>
+            <p class="card-rarity section-content">{{capitalize card.rarity}}</p>
             <p class="card-number section-content">#{{card.number}}</p>
             <p class="card-artist section-content">Illustrated by {{card.artist}}</p>
         </section>
