--- a/test/http/views/setListPage.hbs
+++ b/test/http/views/setListPage.hbs
@@ -2,9 +2,8 @@
     <thead>
         <tr class="table-header-row">
             <th class="table-header pl-2">Set</th>
-            <th class="table-header">Value</th>
-            <th class="table-header">% Owned</th>
-            <th class="table-header">Owned Value</th>
+            <th class="table-header">Price</th>
+            <th class="table-header">Owned</th>
             <th class="table-header pr-2">Release Date</th>
         </tr>
     </thead>
@@ -19,10 +18,9 @@
             <td class="py-2">
               <div class="relative w-full h-6 bg-gray-200 rounded">
                     <div class="absolute top-0 left-0 h-full bg-teal-500 rounded" style="width: {{this.ownedPercentage}}%;"></div>
-                    <span class="absolute inset-0 flex items-center justify-center text-black font-bold">{{this.ownedPercentage}}%</span>
+                    <span class="absolute inset-0 flex items-center justify-center text-black font-bold">$0.00</span>
                 </div>
             </td>
-            <td class="py-2">$0.00</td>
             <td class="py-2 pr-2">{{this.releaseDate}}</td>
         </tr>
         {{/each}}
