update hbs to default to normal price WIP

--- a/src/adapters/http/views/cardPrintings.hbs
+++ b/src/adapters/http/views/cardPrintings.hbs
@@ -34,7 +34,7 @@
                 </a>
             </td>
             <td class="card-printing-price">
-                <p>{{this.price}}</p>
+                <p>{{this.price.normal}}</p>
             </td>
         </tr>
         {{/each}}
