--- a/src/adapters/http/views/inventory.hbs
+++ b/src/adapters/http/views/inventory.hbs
@@ -27,10 +27,13 @@
                 </td>
                 <td>
                     <a href="/sets/{{this.setCode}}">
-                        <i class="ss ss-{{this.setCode}} ss-{{toLowerCase this.rarity}} ss-fw"></i>{{toUpperCase this.setCode}}
+                        <i class="ss ss-{{this.setCode}} ss-{{toLowerCase this.rarity}} ss-fw"></i>
+                        {{toUpperCase this.setCode}}
                     </a>
                 </td>
-                <td>${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
+                <td>
+                    ${{#if this.price.normal}}{{this.price.normal}}{{else}}0.00{{/if}}
+                </td>
                 <td class="delete-inventory-entry pr-2">
                     {{>deleteInventoryEntry card=this}}
                 </td>
