--- a/test/http/views/partials/cardInfo.hbs
+++ b/test/http/views/partials/cardInfo.hbs
@@ -45,7 +45,7 @@
     <section class="price-info md:w-1/3 md:pl-6 mb-4 md:mb-0 border-none">
         <section class="subjsection-container">
             <h3 class="section-title">Price</h3>
-            <span>${{#if card.price}}{{card.price}}{{else}}0.00{{/if}}</span>
+            <span>${{#if card.price.normal}}{{card.price.normal}}{{else}}0.00{{/if}}</span>
             <section class="inventory-info"></section>
             {{>cardsOwned}}
         </section>
@@ -65,7 +65,7 @@
                     <span> ({{toUpperCase p.setCode}})</span>
                 </td>
                 <td class="other-printing-price py-2 text-right">
-                    ${{#if p.price}}{{p.price}}{{else}}0.00{{/if}}
+                    ${{#if p.price.normal}}{{p.price.normal}}{{else}}0.00{{/if}}
                 </td>
             </tr>
             {{/each}}
