--- a/test/http/views/partials/cardInfo.hbs
+++ b/test/http/views/partials/cardInfo.hbs
@@ -45,7 +45,7 @@
     <section class="price-info md:w-1/3 md:pl-6 mb-4 md:mb-0 border-none">
         <section class="subjsection-container">
             <h3 class="section-title">Price</h3>
-            <span>${{#if card.price.normal}}{{card.price.normal}}{{else}}0.00{{/if}}</span>
+            {{>price card=card}}
             <section class="inventory-info"></section>
             {{>cardsOwned}}
         </section>
