--- a/test/http/views/inventory.hbs
+++ b/test/http/views/inventory.hbs
@@ -27,10 +27,11 @@
                 </td>
                 <td>
                     <a href="/sets/{{this.setCode}}">
-                        <i class="ss ss-{{this.setCode}} ss-{{toLowerCase this.rarity}} ss-fw"></i>{{toUpperCase this.setCode}}
+                        <i class="ss ss-{{this.setCode}} ss-{{toLowerCase this.rarity}} ss-fw"></i>
+                        {{toUpperCase this.setCode}}
                     </a>
                 </td>
-                <td>${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
+                <td>{{>price card=this}}</td>
                 <td class="delete-inventory-entry pr-2">
                     {{>deleteInventoryEntry card=this}}
                 </td>
