--- a/test/http/views/partials/cardInfo.hbs
+++ b/test/http/views/partials/cardInfo.hbs
@@ -24,7 +24,7 @@
                 <p class="card-type section-content">{{card.type}}</p>
                 <p class="card-oracle-text section-content">{{card.oracleText}}</p>
             </section>
-            <p class="card-rarity section-content">{{card.rarity}}</p>
+            <p class="card-rarity section-content">{{capitalize card.rarity}}</p>
             <p class="card-number section-content">#{{card.number}}</p>
             <p class="card-artist section-content">Illustrated by {{card.artist}}</p>
         </section>
@@ -45,7 +45,7 @@
     <section class="price-info md:w-1/3 md:pl-6 mb-4 md:mb-0 border-none">
         <section class="subjsection-container">
             <h3 class="section-title">Price</h3>
-            <span>${{#if card.price}}{{card.price}}{{else}}0.00{{/if}}</span>
+            {{>price card=card}}
             <section class="inventory-info"></section>
             {{>cardsOwned}}
         </section>
@@ -65,7 +65,7 @@
                     <span> ({{toUpperCase p.setCode}})</span>
                 </td>
                 <td class="other-printing-price py-2 text-right">
-                    ${{#if p.price}}{{p.price}}{{else}}0.00{{/if}}
+                    ${{#if p.price.normal}}{{p.price.normal}}{{else}}0.00{{/if}}
                 </td>
             </tr>
             {{/each}}
