--- a/src/adapters/http/views/partials/price.hbs
+++ b/src/adapters/http/views/partials/price.hbs
@@ -1,11 +1,18 @@
+{{!-- TODO: move this logic out to map to PriceDto for reads so that it is ready to go --}}
 <span>
-{{#each prices}}
-    ${{#if this.normal}}
-        {{this.normal}}
-    {{else if this.foil}}
-        {{this.foil}}
-    {{else}}
-        0.00
-    {{/if}}
-{{/each}}
+{{#if prices}}
+    {{#each prices}}
+        ${{#if this.normal}}
+            {{this.normal}}
+        {{else}}
+            {{#if this.foil}}
+                {{this.foil}}
+            {{else}}
+                0.00
+            {{/if}}
+        {{/if}}
+    {{/each}}
+{{else}}
+    --
+{{/if}}
 </span>
