--- a/src/adapters/http/views/partials/price.hbs
+++ b/src/adapters/http/views/partials/price.hbs
@@ -1,18 +1,6 @@
-{{!-- TODO: move this logic out to map to PriceDto for reads so that it is ready to go --}}
-<span>
-{{#if prices}}
-    {{#each prices}}
-        ${{#if this.normal}}
-            {{this.normal}}
-        {{else}}
-            {{#if this.foil}}
-                {{this.foil}}
-            {{else}}
-                0.00
-            {{/if}}
-        {{/if}}
-    {{/each}}
-{{else}}
-    --
-{{/if}}
+<span class="normal-price">
+    {{displayPrice}}
+</span>
+<span class="foil-price">
+    {{foilDisplayPrice}}
 </span>
