--- a/src/adapters/http/views/inventory.hbs
+++ b/src/adapters/http/views/inventory.hbs
@@ -31,7 +31,7 @@
                         {{toUpperCase this.setCode}}
                     </a>
                 </td>
-                <td>{{>price prices=this.prices}}</td>
+                <td>{{>price card=this}}</td>
                 <td class="delete-inventory-entry pr-2">
                     {{>deleteInventoryEntry card=this}}
                 </td>
