--- a/src/adapters/http/views/partials/price.hbs
+++ b/src/adapters/http/views/partials/price.hbs
@@ -1,6 +1,2 @@
-<span class="normal-price">
-    {{displayPrice}}
-</span>
-<span class="foil-price">
-    {{foilDisplayPrice}}
-</span>
+<span class="normal-price">{{card.displayPrice}}</span>
+<span class="foil-price hidden">{{card.foilDisplayPrice}}</span>
