--- a/src/adapters/http/views/card.hbs
+++ b/src/adapters/http/views/card.hbs
@@ -1,1 +1,3 @@
+<button id="toggle-price-mode" class="btn btn-secondary mb-4" type="button">Foil Prices</button>
 <article>{{>cardInfo}}</article>
+<script src="/public/js/priceToggle.js" defer></script>
