--- a/src/adapters/http/views/partials/cardInfo.hbs
+++ b/src/adapters/http/views/partials/cardInfo.hbs
@@ -45,9 +45,10 @@
     <section class="price-info md:w-1/3 md:pl-6 mb-4 md:mb-0 border-none">
         <section class="subjsection-container">
             <h3 class="section-title">Price</h3>
-            {{>price prices=card.prices}}
-            <section class="inventory-info"></section>
-            {{>cardsOwned}}
+            {{>price}}
+            <section class="inventory-info">
+                {{>cardsOwned}}
+            </section>
         </section>
     </section>
 </section>
@@ -64,7 +65,7 @@
                     <a class="table-link" href="{{p.url}}">{{p.set.name}}</a>
                     <span> ({{toUpperCase p.setCode}})</span>
                 </td>
-                <td class="other-printing-price py-2 text-right">{{>price prices=p.prices}}</td>
+                <td class="other-printing-price py-2 text-right">{{>price card=p}}</td>
             </tr>
             {{/each}}
         </tbody>
