--- a/src/adapters/http/views/partials/setCards.hbs
+++ b/src/adapters/http/views/partials/setCards.hbs
@@ -22,7 +22,7 @@
             </td>
             <td class="py-2">{{>manaCost card=this}}</td>
             <td class="py-2">{{this.rarity}}</td>
-            <td class="py-2 pr-2">{{>price prices=this.prices}}</td>
+            <td class="py-2 pr-2">{{>price card=this}}</td>
         </tr>
         {{/each}}
     </tbody>
