Normal & Foil Price Display with Toggle (#106)
* add foil and normal attrs

* price displays in dto, agg svc

* fix create inventory card agg map method

* display price resolution logic

* show foil and normal price with toggle

* price dto vals to number type

* move to dollar conversion

--- a/src/adapters/http/views/partials/price.hbs
+++ b/src/adapters/http/views/partials/price.hbs
@@ -1,18 +1,2 @@
-{{!-- TODO: move this logic out to map to PriceDto for reads so that it is ready to go --}}
-<span>
-{{#if prices}}
-    {{#each prices}}
-        ${{#if this.normal}}
-            {{this.normal}}
-        {{else}}
-            {{#if this.foil}}
-                {{this.foil}}
-            {{else}}
-                0.00
-            {{/if}}
-        {{/if}}
-    {{/each}}
-{{else}}
-    --
-{{/if}}
-</span>
+<span class="normal-price">{{card.displayPrice}}</span>
+<span class="foil-price hidden">{{card.foilDisplayPrice}}</span>
