add isFoil to inventory entity, dtos, js

--- a/src/adapters/http/views/inventory.hbs
+++ b/src/adapters/http/views/inventory.hbs
@@ -32,9 +32,7 @@
                     </a>
                 </td>
                 <td>{{>price card=this}}</td>
-                <td class="delete-inventory-entry pr-2">
-                    {{>deleteInventoryEntry card=this}}
-                </td>
+                <td class="delete-inventory-entry pr-2">{{>deleteInventoryEntry card=this}}</td>
             </tr>
             {{/each}}
         </tbody>
