foil form hidden by default

--- a/src/adapters/http/public/css/tailwind.css
+++ b/src/adapters/http/public/css/tailwind.css
@@ -2676,7 +2676,8 @@ select {
 }
 
 .foil-mode .normal-price,
-.foil-mode .owned-normal {
+.foil-mode .owned-normal,
+.foil-inventory-controller {
   display: none ;
 }
 
