--- a/src/adapters/http/styles/tailwind.css
+++ b/src/adapters/http/styles/tailwind.css
@@ -157,7 +157,8 @@
 }
 
 .foil-mode .normal-price,
-.foil-mode .owned-normal {
+.foil-mode .owned-normal,
+.foil-inventory-controller {
     display: none ;
 }
 .foil-mode .foil-price,
