--- a/src/adapters/http/views/partials/cardInfo.hbs
+++ b/src/adapters/http/views/partials/cardInfo.hbs
@@ -47,7 +47,16 @@
             <h3 class="section-title">Price</h3>
             {{>price}}
             <section class="inventory-info">
-                {{>cardsOwned}}
+                {{#if card.hasNonFoil}}
+                <span class="non-foil-inventory-controller">
+                    {{>cardsOwned isFoil=false card=card}}
+                </span>
+                {{/if}}
+                {{#if card.hasFoil}}
+                <span class="foil-inventory-controller">
+                    {{>cardsOwned isFoil=true card=card}}
+                </span>
+                {{/if}}
             </section>
         </section>
     </section>
