inventory write/update working from front end with foil toggle

--- a/src/adapters/http/public/css/tailwind.css
+++ b/src/adapters/http/public/css/tailwind.css
@@ -2676,8 +2676,7 @@ select {
 }
 
 .foil-mode .normal-price,
-.foil-mode .owned-normal,
-.foil-inventory-controller {
+.foil-mode .owned-normal {
   display: none ;
 }
 
