--- a/src/adapters/http/styles/tailwind.css
+++ b/src/adapters/http/styles/tailwind.css
@@ -157,8 +157,7 @@
 }
 
 .foil-mode .normal-price,
-.foil-mode .owned-normal,
-.foil-inventory-controller {
+.foil-mode .owned-normal {
     display: none ;
 }
 .foil-mode .foil-price,
