--- a/src/adapters/http/views/set.hbs
+++ b/src/adapters/http/views/set.hbs
@@ -1,4 +1,4 @@
-<button id="toggle-price-mode" class="btn btn-secondary mb-4" type="button">Foil Prices</button>
+<button id="toggle-price-mode" class="btn btn-secondary mb-4" type="button">Foil</button>
 <div>{{>setInfo}}</div>
 <div>{{>setCards}}</div>
 <script src="/public/js/priceToggle.js" defer></script>
