--- a/src/adapters/http/views/partials/cardsOwned.hbs
+++ b/src/adapters/http/views/partials/cardsOwned.hbs
@@ -1,6 +1,8 @@
 <form class="quantity-form inline-flex items-stretch border-none rounded overflow-hidden m-1 h-8"
     data-item-id="{{card.id}}">
 
+    <input type="hidden" name="cardId" value="{{card.id}}" />
+
     <button type="button"
         class="increment-quantity inventory-controller-button hover:text-purple-400 active:text-purple-600">+</button>
 
@@ -8,10 +10,10 @@
         border-none bg-teal-300 text-white px-0
         text-sm sm:text-xs md:text-base lg:text-base
         w-12 sm:w-12 md:w-12 lg:w-12 xl:w-16
-        focus:outline-none focus:ring-0" value="{{#if card.quantity}}{{card.quantity}}{{else}}0{{/if}}"
+        focus:outline-none focus:ring-0" value="{{variant.quantity}}"
         data-id="{{card.id}}" />
 
-    <input type="hidden" name="isFoil" value="{{isFoil}}">
+    <input type="hidden" name="isFoil" value="{{eq variant.type 'foil'}}" />
     <button type="button"
         class="decrement-quantity inventory-controller-button hover:text-red-400 active:text-red-600">-</button>
 
