--- a/src/adapters/http/views/partials/setCards.hbs
+++ b/src/adapters/http/views/partials/setCards.hbs
@@ -19,6 +19,7 @@
             <td class="py-2">
                 <a href="{{this.url}}" class="table-link">{{this.name}}</a>
                 {{>reserved card=this}}
+                {{>foil card=this}}
             </td>
             <td class="py-2">{{>manaCost card=this}}</td>
             <td class="py-2">{{this.rarity}}</td>
