--- a/src/adapters/http/views/partials/inventoryCtrl.hbs
+++ b/src/adapters/http/views/partials/inventoryCtrl.hbs
@@ -1,5 +1,5 @@
 {{#each card.variants as |variant|}}
-    <span class="{{variant.type}}-inventory-controller {{#unless @first}}hidden{{/unless}}">
+    <span class="{{#if variant.isFoil}}foil{{else}}normal{{/if}}-inventory-controller {{#unless @first}}hidden{{/unless}}">
         {{>cardsOwned variant=variant card=../card}}
     </span>
 {{/each}}
