--- a/src/adapters/http/views/partials/setCards.hbs
+++ b/src/adapters/http/views/partials/setCards.hbs
@@ -13,12 +13,13 @@
         {{#each set.cards}}
         <tr class="table-row">
             <td class="py-2 pl-2">
-                {{>cardsOwned card=this}}
+                {{>inventoryCtrl card=this}}
             </td>
             <td class="py-2">{{this.number}}</td>
             <td class="py-2">
                 <a href="{{this.url}}" class="table-link">{{this.name}}</a>
                 {{>reserved card=this}}
+                {{>foil card=this}}
             </td>
             <td class="py-2">{{>manaCost card=this}}</td>
             <td class="py-2">{{this.rarity}}</td>
