--- a/src/adapters/http/views/partials/deleteInventoryEntry.hbs
+++ b/src/adapters/http/views/partials/deleteInventoryEntry.hbs
@@ -1,6 +1,6 @@
-<form class="delete-inventory-form" data-item-id="{{card.id}}">
-    <input type="hidden" name="card-id" value="{{card.id}}" />
-    <input type="hidden" name="isFoil" value="{{variant.isFoil}}" />
+<form class="delete-inventory-form" data-item-id="{{card.cardId}}">
+    <input type="hidden" name="card-id" value="{{card.cardId}}" />
+    <input type="hidden" name="isFoil" value="{{card.isFoil}}" />
 
     <button type="button" class="delete-inventory-button">
         <i class="fas fa-trash-alt"></i>
