--- a/src/adapters/http/views/partials/price.hbs
+++ b/src/adapters/http/views/partials/price.hbs
@@ -1,5 +1,3 @@
-{{#each card.variants as |variant|}}
-<span class="{{#if variant.isFoil}}foil{{else}}normal{{/if}}-price {{#unless @first}}hidden{{/unless}}">
-    {{variant.displayValue}}
+<span class="{{#if card.isFoil}}foil{{else}}normal{{/if}}-price {{#if card.hidden}}hidden{{/if}}">
+    {{card.displayValue}}
 </span>
-{{/each}}
