--- a/src/adapters/http/views/setListPage.hbs
+++ b/src/adapters/http/views/setListPage.hbs
@@ -14,11 +14,14 @@
                 <i class="ss ss-{{this.keyruneCode}} ss-fw"></i>
                 <a href="{{this.url}}" class="table-link">{{this.name}}</a>
             </td>
-            <td class="py-2">$0.00</td>
+            <td class="py-2">${{this.totalValue}}</td>
             <td class="py-2">
-              <div class="relative w-full h-6 bg-gray-200 rounded">
-                    <div class="absolute top-0 left-0 h-full bg-teal-500 rounded" style="width: {{this.ownedPercentage}}%;"></div>
-                    <span class="absolute inset-0 flex items-center justify-center text-black font-bold">$0.00</span>
+                <div class="relative w-full h-6 bg-gray-200 rounded">
+                    <div class="absolute top-0 left-0 h-full bg-teal-500 rounded"
+                        style="width: {{this.ownedPercentage}}%;"></div>
+                    <span class="absolute inset-0 flex items-center justify-center text-black font-bold">
+                        ${{this.ownedValue}}
+                    </span>
                 </div>
             </td>
             <td class="py-2 pr-2">{{this.releaseDate}}</td>
