--- a/src/adapters/http/views/partials/price.hbs
+++ b/src/adapters/http/views/partials/price.hbs
@@ -1,3 +1,3 @@
-<span class="{{#if card.isFoil}}foil{{else}}normal{{/if}}-price {{#if card.hidden}}hidden{{/if}}">
+<span class="{{#if card.isFoil}}foil{{else}}normal{{/if}}-price">
     {{card.displayValue}}
 </span>
