--- a/src/adapters/http/views/set.hbs
+++ b/src/adapters/http/views/set.hbs
@@ -20,7 +20,8 @@
                 <th class="table-header">Name</th>
                 <th class="table-header">Mana Cost</th>
                 <th class="table-header">Rarity</th>
-                <th class="table-header pr-2">Price</th>
+                <th class="table-header">Price</th>
+                <th class="table-header pr-2">Foil Price</th>
             </tr>
         </thead>
         <tbody>
@@ -36,7 +37,8 @@
                 </td>
                 <td class="py-2">{{>manaCost card=this}}</td>
                 <td class="py-2">{{this.rarity}}</td>
-                <td class="py-2 pr-2">{{>price card=this}}</td>
+                <td class="py-2">{{#if card.normalPrice}}${{card.normalPrice}}{{/if}}</td>
+                <td class="py-2 pr-2">{{#if card.foilPrice}}${{card.foilPrice}}{{/if}}</td>
             </tr>
             {{/each}}
         </tbody>
