--- a/src/adapters/http/views/card.hbs
+++ b/src/adapters/http/views/card.hbs
@@ -46,7 +46,8 @@
         <section class="price-info md:w-1/3 md:pl-6 mb-4 md:mb-0 border-none">
             <section class="subjsection-container">
                 <h3 class="section-title">Price</h3>
-                {{>price}}
+                <span>{{#if card.normalPrice}}${{card.normalPrice}}{{/if}}</span>
+                <span>{{#if card.foilPrice}}${{card.foilPrice}}{{/if}}</span>
                 <section class="inventory-info">
                     {{>inventoryCtrl card=card}}
                 </section>
