set card image previews

--- a/src/adapters/http/views/card.hbs
+++ b/src/adapters/http/views/card.hbs
@@ -66,6 +66,9 @@
         <table class="table-container">
             <tbody>
                 {{#each otherPrintings as |p|}}
+{{!-- <a href="{{card.url}}" class="card-img-link">
+                        <img src="{{card.imgSrc}}" alt="{{card.name}}" class="card-img-preview" />
+                    </a> --}}
                 <tr class="table-row">
                     <td class="set-icon py-2"><i class="ss ss-{{p.setCode}}"></i></td>
                     <td class="other-printing-url py-2">
