--- a/src/adapters/http/views/set.hbs
+++ b/src/adapters/http/views/set.hbs
@@ -31,9 +31,12 @@
                     {{>inventoryCtrl card=this}}
                 </td>
                 <td class="py-2">{{this.number}}</td>
-                <td class="py-2">
-                    <a href="{{this.url}}" class="table-link">{{this.name}}</a>
+                <td class="card-name-link py-2" data-id="{{this.cardId}}" data-img-src="{{this.imgSrc}}">
+                    <a href="{{this.url}}">{{this.name}}</a>
                     {{>reserved card=this}}
+                    <a href="{{this.url}}" class="card-img-link">
+                        <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
+                    </a>
                 </td>
                 <td class="py-2">{{>manaCost card=this}}</td>
                 <td class="py-2">{{this.rarity}}</td>
