--- a/src/adapters/http/views/inventory.hbs
+++ b/src/adapters/http/views/inventory.hbs
@@ -11,14 +11,13 @@
                 <th class="table-header">Name</th>
                 <th class="table-header">Set</th>
                 <th class="table-header">Price</th>
-                <th class="table-header">Foil Price</th>
                 <th class="table-header pr-2">Delete</th>
             </tr>
         </thead>
         <tbody>
             {{#each cards as |card|}}
             <tr class="table-row">
-                <td class="cards-owned-td pl-2">{{>inventoryCtrl card=card}}</td>
+                <td class="cards-owned-td pl-2">{{>cardsOwned card=card}}</td>
                 <td class="card-name-link" data-id="{{card.cardId}}" data-img-src="{{card.imgSrc}}">
                     <a href="{{card.url}}">{{card.name}}</a>
                     {{>reserved card=card}}
@@ -32,9 +31,18 @@
                         {{toUpperCase card.setCode}}
                     </a>
                 </td>
-                <td>{{card.normalPrice}}</td>
-                <td>{{card.foilPrice}}</td>
-                <td class="delete-inventory-entry pr-2">{{>deleteInventoryEntry card=card}}</td>
+                <td>{{card.price}}{{#if card.isFoil}}<span
+                        class="text-ts text-white bg-purple-500 px-1 mx-1">Foil</span>{{/if}}</td>
+                <td class="delete-inventory-entry pr-2">
+                    <form class="delete-inventory-form" data-item-id="{{card.cardId}}">
+                        <input type="hidden" name="card-id" value="{{card.cardId}}" />
+                        <input type="hidden" name="isFoil" value="{{card.isFoil}}" />
+
+                        <button type="button" class="delete-inventory-button">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
+                    </form>
+                </td>
             </tr>
             {{/each}}
         </tbody>
