fix inventory page prices

--- a/src/adapters/http/views/inventory.hbs
+++ b/src/adapters/http/views/inventory.hbs
@@ -31,7 +31,7 @@
                         {{toUpperCase card.setCode}}
                     </a>
                 </td>
-                <td>{{card.price}}{{#if card.isFoil}}<span
+                <td>{{card.priceValue}}{{#if card.isFoil}}<span
                         class="text-ts text-white bg-purple-500 px-1 mx-1">Foil</span>{{/if}}</td>
                 <td class="delete-inventory-entry pr-2">
                     <form class="delete-inventory-form" data-item-id="{{card.cardId}}">
