--- a/src/adapters/http/public/css/tailwind.css
+++ b/src/adapters/http/public/css/tailwind.css
@@ -1834,10 +1834,6 @@ select {
   top: 0px;
 }
 
-.m-1 {
-  margin: 0.25rem;
-}
-
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -1927,10 +1923,6 @@ select {
   height: 1.5rem;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .h-full {
   height: 100%;
 }
@@ -1941,10 +1933,6 @@ select {
 
 .w-1\/2 {
   width: 50%;
-}
-
-.w-12 {
-  width: 3rem;
 }
 
 .w-6 {
@@ -1987,10 +1975,6 @@ select {
   align-items: center;
 }
 
-.items-stretch {
-  align-items: stretch;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -2015,10 +1999,6 @@ select {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
-.overflow-hidden {
-  overflow: hidden;
 }
 
 .text-ellipsis {
@@ -2084,11 +2064,6 @@ select {
   background-color: rgb(209 246 241 / var(--tw-bg-opacity, 1));
 }
 
-.bg-teal-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(110 218 209 / var(--tw-bg-opacity, 1));
-}
-
 .bg-teal-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(40 173 168 / var(--tw-bg-opacity, 1));
@@ -2097,11 +2072,6 @@ select {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
 }
 
 .px-1 {
@@ -2346,10 +2316,6 @@ select {
   width: 16rem;
 }
 
-.cards-owned-td {
-  width: 0px;
-}
-
 .create-user-container {
   margin-left: auto;
   margin-right: auto;
@@ -2381,6 +2347,27 @@ select {
   color: darkred;
 }
 
+.foil-badge {
+  margin-left: 0.25rem;
+  display: inline-flex;
+  align-items: center;
+  border-radius: 0.25rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(140 70 179 / var(--tw-bg-opacity, 1));
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .input-field {
   margin-top: 0.25rem;
   width: 100%;
@@ -2408,7 +2395,7 @@ select {
   color: rgb(40 173 168 / var(--tw-text-opacity, 1));
 }
 
-.inventory-controller-button {
+.inventory-controller-button-normal {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -2420,14 +2407,30 @@ select {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.inventory-controller-button:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(64 193 186 / var(--tw-bg-opacity, 1));
+.inventory-controller-button-normal:hover {
+  background-color: rgb(64 193 186 / 0.3);
 }
 
-.inventory-controller-button:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(110 218 209 / var(--tw-bg-opacity, 1));
+.inventory-controller-button-normal:active {
+  background-color: rgb(40 173 168 / 0.3);
+}
+
+.inventory-controller-button-foil {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.inventory-controller-button-foil:hover {
+  background-color: rgb(255 255 255 / 0.2);
+}
+
+.inventory-controller-button-foil:active {
+  background-color: rgb(255 255 255 / 0.3);
 }
 
 .link {
@@ -2525,6 +2528,37 @@ select {
   }
 }
 
+.price-foil {
+  display: inline-block;
+  border-radius: 0.375rem;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #a866cf var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(168 102 207 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #40c1ba var(--tw-gradient-to-position);
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.price-normal {
+  display: inline-block;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+}
+
 .quantity-form {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -2541,6 +2575,84 @@ select {
   .quantity-form {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+}
+
+.quantity-form-foil {
+  margin: 0.25rem;
+  display: inline-flex;
+  height: 2rem;
+  align-items: stretch;
+  overflow: hidden;
+  border-radius: 0.25rem;
+  border-style: none;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #c291e1 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(194 145 225 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #6edad1 var(--tw-gradient-to-position);
+}
+
+.quantity-form-normal {
+  margin: 0.25rem;
+  display: inline-flex;
+  height: 2rem;
+  align-items: stretch;
+  overflow: hidden;
+  border-radius: 0.25rem;
+  border-style: none;
+  --tw-bg-opacity: 1;
+  background-color: rgb(110 218 209 / var(--tw-bg-opacity, 1));
+}
+
+.quantity-owned {
+  width: 3rem;
+  border-style: none;
+  background-color: transparent;
+  padding-left: 0px;
+  padding-right: 0px;
+  text-align: center;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.quantity-owned:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+@media (min-width: 640px) {
+  .quantity-owned {
+    width: 3rem;
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .quantity-owned {
+    width: 3rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .quantity-owned {
+    width: 3rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .quantity-owned {
+    width: 4rem;
   }
 }
 
@@ -4190,6 +4302,11 @@ select {
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 
+.hover\:text-purple-100:hover {
+  --tw-text-opacity: 1;
+  color: rgb(244 236 251 / var(--tw-text-opacity, 1));
+}
+
 .hover\:text-purple-400:hover {
   --tw-text-opacity: 1;
   color: rgb(194 145 225 / var(--tw-text-opacity, 1));
@@ -4210,12 +4327,6 @@ select {
   outline-offset: 2px;
 }
 
-.focus\:ring-0:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .focus\:ring-2:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -4224,6 +4335,11 @@ select {
 
 .focus\:ring-inset:focus {
   --tw-ring-inset: inset;
+}
+
+.active\:text-purple-200:active {
+  --tw-text-opacity: 1;
+  color: rgb(233 217 245 / var(--tw-text-opacity, 1));
 }
 
 .active\:text-purple-600:active {
@@ -4374,10 +4490,6 @@ select {
     margin: 0px;
   }
 
-  .sm\:w-12 {
-    width: 3rem;
-  }
-
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -4386,11 +4498,6 @@ select {
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
-  }
-
-  .sm\:text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
   }
 }
 
@@ -4419,10 +4526,6 @@ select {
     width: 33.333333%;
   }
 
-  .md\:w-12 {
-    width: 3rem;
-  }
-
   .md\:w-2\/3 {
     width: 66.666667%;
   }
@@ -4435,11 +4538,6 @@ select {
     padding-left: 1.5rem;
   }
 
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -4447,23 +4545,8 @@ select {
 }
 
 @media (min-width: 1024px) {
-  .lg\:w-12 {
-    width: 3rem;
-  }
-
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-
-  .lg\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:w-16 {
-    width: 4rem;
   }
 }
