--- a/src/adapters/http/views/set.hbs
+++ b/src/adapters/http/views/set.hbs
@@ -40,8 +40,16 @@
                 </td>
                 <td class="py-2">{{>manaCost card=this}}</td>
                 <td class="py-2">{{this.rarity}}</td>
-                <td class="py-2">{{#if this.hasNormal}}{{this.normalPrice}}{{/if}}</td>
-                <td class="py-2 pr-2">{{#if this.hasFoil}}{{this.foilPrice}}{{/if}}</td>
+                <td class="py-2">
+                    {{#if this.hasNormal}}
+                    <span class="price-normal">{{this.normalPrice}}</span>
+                    {{/if}}
+                </td>
+                <td class="py-2 pr-2">
+                    {{#if this.hasFoil}}
+                    <span class="price-foil">{{this.foilPrice}}</span>
+                    {{/if}}
+                </td>
             </tr>
             {{/each}}
         </tbody>
