remove error view dto

--- a/src/adapters/http/views/partials/navbar.hbs
+++ b/src/adapters/http/views/partials/navbar.hbs
@@ -15,7 +15,7 @@
                 <a class="navbar-link" href="/user">My Account</a>
                 <a class="navbar-link" href="/auth/logout">Logout</a>
                 {{else}}
-                <a class="navbar-link" href="/auth/login">Login</a>
+                <a class="navbar-link" href="/auth/login">Sign In</a>
                 <a class="navbar-link" href="/user/create">Create Account</a>
                 {{/if}}
             </div>
