--- a/src/adapters/http/views/login.hbs
+++ b/src/adapters/http/views/login.hbs
@@ -5,7 +5,7 @@
     <form id="login-form" class="mt-6" method="post">
         <div class="mb-4">
             <label class="input-label" for="user-email">Email</label>
-            <input id="user-email" class="input-field" type="email" name="email" required/>
+            <input id="user-email" class="input-field" type="email" name="email" value="{{this.email}}" required/>
         </div>
         <div class="mb-6">
             <label class="input-label" for="user-password">Password</label>
