--- a/src/http/views/partials/navbar.hbs
+++ b/src/http/views/partials/navbar.hbs
@@ -49,6 +49,12 @@
 <p id="response-message" class="response-message bg-{{#if status }}{{ status }}{{else}}info{{/if}} hidden" role="alert">
     {{message}}
 </p>
+{{#if @root.query.welcome}}
+<div class="welcome-banner" role="alert">
+    <h2>Welcome to I Want My MTG: Collection Tracker</h2>
+    <p>Your account has been created successfully. You're now logged in and ready to start tracking your cards.</p>
+</div>
+{{/if}}
 
 <script>
     document.addEventListener("DOMContentLoaded", () => {
